Updated list operations to use SequencedCollection methods