@@ -129,7 +129,7 @@ public class DefaultServerRequestHandler {
     protected String getQueryParameterSafely(QueryStringDecoder queryStringDecoder, String parameterName) {
         List<String> parameterValues = queryStringDecoder.parameters().get(parameterName);
         if (parameterValues != null && !parameterValues.isEmpty())
-            return parameterValues.get(0);
+            return parameterValues.getFirst();
         else
             return null;
     }
